// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`checkForTriangle > bundled executable does not exist, triangle not installed globally 1`] = `[Error: Please ensure that triangle (https://github.com/esimov/triangle, written in Golang) is installed and globally available.]`;

exports[`runTriangle > allows hex as value for background 1`] = `
[
  "-in",
  "mocked",
  "-bl",
  "2",
  "-nf",
  "0",
  "-bf",
  "1",
  "-ef",
  "6",
  "-pr",
  "0.075",
  "-pth",
  "10",
  "-pts",
  "6",
  "-so",
  "10",
  "-wf",
  "0",
  "-st",
  "1",
  "-bg",
  "#654321",
  "-out",
  "mocked",
]
`;

exports[`runTriangle > executes triangle with custom config, applying default number of triangles 1`] = `
[
  "-in",
  "mocked",
  "-bl",
  "2",
  "-nf",
  "1",
  "-bf",
  "1",
  "-ef",
  "6",
  "-pr",
  "0.075",
  "-pth",
  "10",
  "-pts",
  "6",
  "-so",
  "10",
  "-wf",
  "0",
  "-st",
  "1",
  "-bg",
  "#040204",
  "-out",
  "mocked",
]
`;

exports[`runTriangle > executes triangle with default config 1`] = `
[
  "-in",
  "mocked",
  "-bl",
  "2",
  "-nf",
  "0",
  "-bf",
  "1",
  "-ef",
  "6",
  "-pr",
  "0.075",
  "-pth",
  "10",
  "-pts",
  "6",
  "-so",
  "10",
  "-wf",
  "0",
  "-st",
  "1",
  "-bg",
  "#040204",
  "-out",
  "mocked",
]
`;

exports[`runTriangle > executes triangle with landscape dimensions 1`] = `
[
  "-in",
  "mocked",
  "-bl",
  "2",
  "-nf",
  "0",
  "-bf",
  "1",
  "-ef",
  "6",
  "-pr",
  "0.075",
  "-pth",
  "10",
  "-pts",
  "6",
  "-so",
  "10",
  "-wf",
  "0",
  "-st",
  "1",
  "-bg",
  "#040204",
  "-out",
  "mocked",
]
`;
